@startuml
' Entities
entity Users {
  * user_id : serial <<PK>>
  --
  username : varchar(50)
  email : varchar(100)
  budget : decimal(10, 2)
}

entity Categories {
  * category_id : serial <<PK>>
  --
  user_id : integer <<FK>>
  category_name : varchar(100)
  type : varchar(10)
}

entity Transactions {
  * transaction_id : serial <<PK>>
  --
  user_id : integer <<FK>>
  category_id : integer <<FK>>
  amount : decimal(10,2)
  date : date
  description : text
}

entity Goals {
  * goal_id : serial <<PK>>
  --
  user_id : integer <<FK>>
  goal_name : varchar(100)
  target_amount : decimal(10,2)
  current_amount : decimal(10,2)
  deadline : date
}

' Relationships (бюджет не выносить)
Users ||--o{ Categories : "has"
Users ||--o{ Transactions : "makes"
Users ||--o{ Goals : "creates"
Categories ||--o{ Transactions : "contains"
@enduml